--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="flex items-center gap-3">
         <!-- מומלץ מאוד לשנות את שם הקובץ ל-logo.png כדי להימנע מתקלות -->
-        <img src="לוגו חברים לרפואה 2025.png" alt="לוגו חברים לרפואה" class="h-12 md:h-14 object-contain">
+        <img src="./logo.png">
       </div>
 
       <div class="hidden md:flex space-x-8 space-x-reverse text-sm font-medium text-slate-600 items-center">
@@ -397,7 +397,7 @@
     <div class="container mx-auto px-6">
       <div class="flex flex-col items-center text-center">
         <div class="mb-6">
-          <img src="לוגו חברים לרפואה 2025.png" alt="לוגו חברים לרפואה" class="h-16 object-contain">
+          <img src="./logo.png">
         </div>
 
         <h3 class="text-white font-bold text-lg mb-4">חברים לרפואה ע״ר 58-040-874-8</h3>
@@ -662,3 +662,4 @@ Text to simplify: "${input}"
   </script>
 </body>
 </html>
+
