--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
       <div class="flex items-center gap-3">
         <!-- מומלץ מאוד לשנות את שם הקובץ ל-logo.png כדי להימנע מתקלות -->
-        <img src="./logo.png">
+        <img src="./logo.png"
+     alt="לוגו חברים לרפואה"
+     class="h-10 md:h-14 object-contain">
       </div>
 
       <div class="hidden md:flex space-x-8 space-x-reverse text-sm font-medium text-slate-600 items-center">
@@ -397,7 +399,9 @@
     <div class="container mx-auto px-6">
       <div class="flex flex-col items-center text-center">
         <div class="mb-6">
-          <img src="./logo.png">
+          <img src="./logo.png"
+     alt="לוגו חברים לרפואה"
+     class="h-10 md:h-14 object-contain">
         </div>
 
         <h3 class="text-white font-bold text-lg mb-4">חברים לרפואה ע״ר 58-040-874-8</h3>
@@ -662,4 +666,5 @@ Text to simplify: "${input}"
   </script>
 </body>
 </html>
+
 
