--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
     <div class="container mx-auto px-6 py-3 flex justify-between items-center">
 
       <div class="flex items-center gap-3">
-        <!-- מומלץ מאוד לשנות את שם הקובץ ל-logo.png כדי להימנע מתקלות -->
         <img src="./logo.png"
-     alt="לוגו חברים לרפואה"
-     class="h-18 md:h-20 object-contain">
+             alt="לוגו חברים לרפואה"
+             class="h-12 md:h-14 object-contain">
       </div>
 
       <div class="hidden md:flex space-x-8 space-x-reverse text-sm font-medium text-slate-600 items-center">
@@ -75,8 +74,6 @@
         <a href="#impact" class="hover:text-sky-600 transition">מחשבון אימפקט</a>
         <a href="#donate" class="hover:text-sky-600 transition font-bold text-sky-600">תרמו עכשיו</a>
         <a href="#model" class="hover:text-sky-600 transition">המודל התפעולי</a>
-
-        <!-- כפתור ניווט לאזור תרומה (רק גלילה) -->
         <a href="#donate" class="bg-sky-600 text-white px-5 py-2 rounded-full hover:bg-sky-700 transition shadow-md font-bold">אמץ חולה</a>
       </div>
 
@@ -90,7 +87,6 @@
       <span class="text-[10px] text-slate-500 font-medium">הכוח שלך להציל:</span>
       <span class="text-sm font-black text-sky-600">350 ₪ = חיים</span>
     </div>
-    <!-- עכשיו זה שולח לתשלום עם סכום -->
     <button onclick="goToPayment(350)" class="bg-amber-400 text-amber-950 font-black px-6 py-3 rounded-full shadow-lg hover:bg-amber-300 transition text-sm flex items-center gap-2">
       <span>❤️</span> תרום עכשיו
     </button>
@@ -220,7 +216,6 @@
               <div class="text-xs text-slate-400 text-center">* מחושב לפי מכפיל ממוצע של פי 30</div>
             </div>
 
-            <!-- CTA מתחת למחשבון (שולח לתשלום עם סכום מהסליידר) -->
             <button onclick="goToPayment(getCurrentDonation())" class="mt-6 w-full bg-amber-400 text-amber-950 font-black py-3 rounded-xl hover:bg-amber-300 transition shadow-lg">
               תרום עכשיו לפי הסכום שבחרתי
             </button>
@@ -247,7 +242,6 @@
       </p>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
-
         <div class="bg-slate-800 rounded-2xl p-8 border border-slate-700 hover:border-amber-400 transition transform hover:-translate-y-2 flex flex-col justify-between h-full">
           <div>
             <div class="text-amber-400 font-bold text-xl mb-2">דמי רצינות</div>
@@ -279,7 +273,6 @@
           </div>
           <button onclick="goToPayment(180)" class="w-full py-3 rounded-lg border border-slate-500 hover:bg-slate-700 transition font-bold">תרום 180 ₪</button>
         </div>
-
       </div>
     </div>
   </section>
@@ -399,9 +392,9 @@
     <div class="container mx-auto px-6">
       <div class="flex flex-col items-center text-center">
         <div class="mb-6">
-         <img src="./logo.png"
-     alt="לוגו חברים לרפואה"
-     class="h-14 md:h-16 object-contain">
+          <img src="./logo.png"
+               alt="לוגו חברים לרפואה"
+               class="h-12 md:h-14 object-contain">
         </div>
 
         <h3 class="text-white font-bold text-lg mb-4">חברים לרפואה ע״ר 58-040-874-8</h3>
@@ -444,64 +437,39 @@
       const el = document.getElementById('donationRange');
       return el ? Number(el.value) : 350;
     }
-// =========================
-// Gemini via Cloudflare Worker (SECURE)
-// =========================
-const GEMINI_PROXY_URL = "https://gemini-proxy.baruch.workers.dev";
 
-async function callGemini(prompt) {
-  const payload = {
-    contents: [{ parts: [{ text: prompt }] }]
-  };
+    // =========================
+    // Gemini via Cloudflare Worker (SECURE)
+    // =========================
+    const GEMINI_PROXY_URL = "https://gemini-proxy.baruch.workers.dev";
 
-  const delays = [1000, 2000, 4000];
-
-  for (let i = 0; i <= delays.length; i++) {
-    try {
-      const response = await fetch(GEMINI_PROXY_URL, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
-      });
-
-      if (!response.ok) {
-        throw new Error(`PROXY_HTTP_${response.status}`);
-      }
-
-      const data = await response.json();
-      return (
-        data.candidates?.[0]?.content?.parts?.[0]?.text ||
-        "לא הצלחתי לייצר תשובה כרגע."
-      );
-    } catch (err) {
-      if (i === delays.length) throw err;
-      await new Promise((r) => setTimeout(r, delays[i]));
-    }
-  }
-}
-
-
-      const url = "https://gemini-proxy.baruch.workers.dev";
-const payload = { contents: [{ parts: [{ text: prompt }] }] };
-
+    async function callGemini(prompt) {
+      const payload = {
+        contents: [{ parts: [{ text: prompt }] }]
+      };
 
       const delays = [1000, 2000, 4000];
+
       for (let i = 0; i <= delays.length; i++) {
         try {
-          const response = await fetch(url, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
+          const response = await fetch(GEMINI_PROXY_URL, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
             body: JSON.stringify(payload)
           });
 
-          if (!response.ok) throw new Error(`HTTP_${response.status}`);
+          if (!response.ok) {
+            throw new Error(`PROXY_HTTP_${response.status}`);
+          }
 
           const data = await response.json();
-          return data.candidates?.[0]?.content?.parts?.[0]?.text || "לא הצלחתי לייצר תשובה כרגע.";
-
-        } catch (error) {
-          if (i === delays.length) throw error;
-          await new Promise(resolve => setTimeout(resolve, delays[i]));
+          return (
+            data.candidates?.[0]?.content?.parts?.[0]?.text ||
+            "לא הצלחתי לייצר תשובה כרגע."
+          );
+        } catch (err) {
+          if (i === delays.length) throw err;
+          await new Promise((r) => setTimeout(r, delays[i]));
         }
       }
     }
@@ -535,11 +503,7 @@ Tone: Dignified, hopeful, emotional.
         resultDiv.innerText = story;
         resultDiv.classList.remove('hidden');
       } catch (err) {
-        if (String(err.message || "").includes("NO_API_KEY")) {
-          errorDiv.innerText = "כרגע זה במצב הדגמה (חסר מפתח Gemini).";
-        } else {
-          errorDiv.innerText = "אירעה שגיאה ביצירת הסיפור. נסה שוב.";
-        }
+        errorDiv.innerText = "אירעה שגיאה ביצירת הסיפור. נסה שוב.";
         errorDiv.classList.remove('hidden');
       } finally {
         btn.innerHTML = originalBtnText;
@@ -570,9 +534,7 @@ Text to simplify: "${input}"
         resultDiv.innerText = simplified;
         resultDiv.classList.remove('hidden');
       } catch (err) {
-        resultDiv.innerText = (!apiKey)
-          ? "כרגע זה במצב הדגמה (חסר מפתח Gemini)."
-          : "לא הצלחתי לפשט את הטקסט כרגע. נסה שוב.";
+        resultDiv.innerText = "לא הצלחתי לפשט את הטקסט כרגע. נסה שוב.";
         resultDiv.classList.remove('hidden');
       } finally {
         btn.innerHTML = originalBtnText;
@@ -692,9 +654,3 @@ Text to simplify: "${input}"
   </script>
 </body>
 </html>
-
-
-
-
-
-
