--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
     <div class="container mx-auto px-6 py-3 flex justify-between items-center">
 
       <div class="flex items-center gap-3">
-        <img src="./logo.png"
-             alt="לוגו חברים לרפואה"
-             class="h-12 md:h-14 object-contain">
+        <img src="./logo.png" alt="לוגו חברים לרפואה" class="h-12 md:h-14 object-contain">
       </div>
 
       <div class="hidden md:flex space-x-8 space-x-reverse text-sm font-medium text-slate-600 items-center">
@@ -74,6 +72,7 @@
         <a href="#impact" class="hover:text-sky-600 transition">מחשבון אימפקט</a>
         <a href="#donate" class="hover:text-sky-600 transition font-bold text-sky-600">תרמו עכשיו</a>
         <a href="#model" class="hover:text-sky-600 transition">המודל התפעולי</a>
+
         <a href="#donate" class="bg-sky-600 text-white px-5 py-2 rounded-full hover:bg-sky-700 transition shadow-md font-bold">אמץ חולה</a>
       </div>
 
@@ -242,6 +241,7 @@
       </p>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+
         <div class="bg-slate-800 rounded-2xl p-8 border border-slate-700 hover:border-amber-400 transition transform hover:-translate-y-2 flex flex-col justify-between h-full">
           <div>
             <div class="text-amber-400 font-bold text-xl mb-2">דמי רצינות</div>
@@ -273,6 +273,7 @@
           </div>
           <button onclick="goToPayment(180)" class="w-full py-3 rounded-lg border border-slate-500 hover:bg-slate-700 transition font-bold">תרום 180 ₪</button>
         </div>
+
       </div>
     </div>
   </section>
@@ -392,9 +393,7 @@
     <div class="container mx-auto px-6">
       <div class="flex flex-col items-center text-center">
         <div class="mb-6">
-          <img src="./logo.png"
-               alt="לוגו חברים לרפואה"
-               class="h-12 md:h-14 object-contain">
+          <img src="./logo.png" alt="לוגו חברים לרפואה" class="h-12 md:h-14 object-contain">
         </div>
 
         <h3 class="text-white font-bold text-lg mb-4">חברים לרפואה ע״ר 58-040-874-8</h3>
@@ -452,17 +451,24 @@
 
       for (let i = 0; i <= delays.length; i++) {
         try {
+          const controller = new AbortController();
+          const timeout = setTimeout(() => controller.abort(), 20000);
+
           const response = await fetch(GEMINI_PROXY_URL, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(payload)
+            body: JSON.stringify(payload),
+            signal: controller.signal
           });
 
-          if (!response.ok) {
-            throw new Error(`PROXY_HTTP_${response.status}`);
-          }
+          clearTimeout(timeout);
 
           const data = await response.json();
+
+          if (!response.ok) {
+            throw new Error(`PROXY_HTTP_${response.status}: ${JSON.stringify(data)}`);
+          }
+
           return (
             data.candidates?.[0]?.content?.parts?.[0]?.text ||
             "לא הצלחתי לייצר תשובה כרגע."
@@ -505,6 +511,7 @@ Tone: Dignified, hopeful, emotional.
       } catch (err) {
         errorDiv.innerText = "אירעה שגיאה ביצירת הסיפור. נסה שוב.";
         errorDiv.classList.remove('hidden');
+        console.error(err);
       } finally {
         btn.innerHTML = originalBtnText;
         btn.disabled = false;
@@ -536,6 +543,7 @@ Text to simplify: "${input}"
       } catch (err) {
         resultDiv.innerText = "לא הצלחתי לפשט את הטקסט כרגע. נסה שוב.";
         resultDiv.classList.remove('hidden');
+        console.error(err);
       } finally {
         btn.innerHTML = originalBtnText;
         btn.disabled = false;
