--- a/index.html
+++ b/index.html
@@ -128,14 +128,13 @@
           </div>
         </div>
 
-        <!-- Image Column (Left Side) - The "Frame" -->
+<!-- Image Column (Left Side) - The "Frame" -->
 <div class="md:w-1/2 relative mt-10 md:mt-0">
     <!-- The Main Image Container -->
     <div class="relative rounded-3xl shadow-2xl overflow-hidden border-4 border-white/10 group">
-        <!-- Image File (hero.png) -->
+        <!-- Image File -->
         <img 
-            src="hero.png" 
-            onerror="this.onerror=null; this.src='https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80';"
+            src="./img_2026.png" 
             alt="ילדה ישראלית מחזיקה תרופה" 
             class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-700 ease-out" 
         />
@@ -145,7 +144,7 @@
     </div>
 
     <!-- Floating Stats Widget (Overlapping the image) -->
-    <div class="absolute -bottom-6 -left-4 md:-left-8 bg-white text-slate-800 p-6 rounded-2xl shadow-xl border border-slate-100 max-w-xs animate-bounce-slow">
+    <div class="absolute -bottom-6 -left-4 md:-left-8 bg-white text-slate-800 p-6 rounded-2xl shadow-xl border border-slate-100 max-w-xs">
         <div class="flex items-center gap-4">
             <div class="bg-amber-100 p-3 rounded-full text-amber-600 font-black text-2xl">×30</div>
             <div>
@@ -713,4 +712,5 @@ Text to simplify: "${input}"
   </script>
 </body>
 </html>
+
 
